# UtilityLibraries

./: CMakeLists.txt
CrossPlatformWindowAndUtility/: CMakeLists.txt
CrossPlatformWindowAndUtility/src/: main.c  platform.c  platform.h
OpenCLAbstractions/: CMakeLists.txt
OpenCLAbstractions/src/: main.c  parallel_computing.c  parallel_computing.h
ResourceManager/: CMakeLists.txt
ResourceManager/dependencies/stb_image/: stb_image.h
ResourceManager/src/: argb_image.h  main.c  resource_manager.c  resource_manager.h
